<resources>
    <string name="app_name">OptiPark</string>
    <string name="login">Login</string>
    <string name="opti_park">OptiPark</string>
    <string name="register">Register</string>
    <string name="terms"><![CDATA[By continuing you agree to our Terms & Conditions]]></string>
    <string name="app_logo">app logo</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="registration_number">Registration Number</string>
    <string name="click_to_login">Click to login</string>
    <string name="full_name">Full Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="subject">Subject</string>
    <string name="send_message">Send Message</string>
    <string name="message">Message</string>
    <string name="select_desired_time_n_n_parking_space">Select Desired Time \n\n Parking Space</string>
    <string name="name">Name</string>
    <string name="availability">Availability</string>
    <string name="pay">Pay</string>
    <string name="_1_hour">1 Hour</string>
    <string name="_2_hours">2 Hours</string>
    <string name="_4_hours">4 Hours</string>
    <string name="_8_hours">8 Hours</string>
    <string name="_12_hours">12 Hours</string>
    <string name="_24_hours">24 Hours</string>
    <string name="cancel_selection">Cancel selection</string>
    <string name="under_construction">Under Construction</string>
    <string name="parking_space_name">Parking Space Name</string>
    <string name="ev_charging_available">EV Charging Available</string>
    <string name="select_parking_space">Select parking space</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="menulogout">menuLogout</string>
    <string name="hello_world2">Hello World2!</string>
    <string name="optipark">OptiPark</string>
    <string name="smart_parking_solutions">Smart Parking Solutions</string>
    <string name="my_account">My account</string>
    <string name="menumyaccount">menuMyaccount</string>
    <string name="available_spaces">Available spaces</string>
    <string name="menuavailable">menuAvailable</string>
    <string name="map">Map</string>
    <string name="menumap">menuMap</string>
    <string name="faq">FAQ</string>
    <string name="contact">Contact</string>
    <string name="reserved">Reserved</string>
    <string name="menufaq">menuFaq</string>
    <string name="menucontact">menuContact</string>
    <string name="menureserved">menuReserved</string>
    <string name="get_directions_to_a_parking_space_by_entering_its_id">Get directions to a parking space by entering its ID</string>
    <string name="enter_car_space">Enter car space</string>
    <string name="get_directions">Get directions</string>
    <string name="a1">A1</string>
    <string name="a2">A2</string>
    <string name="a3">A3</string>
    <string name="a4">A4</string>
    <string name="a5">A5</string>
    <string name="a6">A6</string>
    <string name="a7">A7</string>
    <string name="a8">A8</string>
    <string name="a9">A9</string>
    <string name="a10">A10</string>
    <string name="a11">A11</string>
    <string name="a12">A12</string>
    <string name="a13">A13</string>
    <string name="a14">A14</string>
    <string name="a15">A15</string>
    <string name="a16">A16</string>
    <string name="a17">A17</string>
    <string name="a18">A18</string>
    <string name="a19">A19</string>
    <string name="a20">A20</string>
    <string name="car_park_entrance">Car Park Entrance</string>
    <string name="hi_user">Hi user</string>
    <string name="car_registration_number">Car Registration Number</string>
    <string name="update">UPDATE</string>
    <string name="delete_account">DELETE ACCOUNT</string>
</resources>