<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@color/black"
    android:padding="20dp">
    
    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/logo3nobg"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optipark"
        android:textSize="24sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smart_parking_solutions"
        android:textColor="@color/white"/>

</LinearLayout>