<!-- item_parking_space.xml -->
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:padding="16dp"
    android:layout_marginTop="8dp"
    android:background="@color/black"
    >

    <TextView
        android:id="@+id/text_parking_space_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parking_space_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/car"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/text_parking_space_availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/availability"
        android:layout_row="3"
        android:layout_column="0"
        android:textSize="16sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/textEvCharging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/ev_charging_available"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="16sp"

        tools:ignore="TextContrastCheck" />


    <!-- Black line separator -->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_row="3"
        android:layout_columnSpan="2"

        />
</GridLayout>
