<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp">

            <EditText
                android:id="@+id/cName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_text_field"
                android:hint="@string/full_name"
                tools:ignore="Autofill,TextFields,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp">

            <EditText
                android:id="@+id/cSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_text_field"
                android:hint="@string/subject"
                tools:ignore="Autofill,TextFields,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp">

            <EditText
                android:id="@+id/cMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_text_field"
                android:hint="@string/message"
                android:minHeight="100dp"
                tools:ignore="Autofill,TextFields,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:backgroundTint="#257CF1"
            android:text="@string/send_message"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>